samples/_failures_safe/1761529955_4f6f94_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a95ac2cd.c: In function ‘main’:
./samples/SAFE/__tmp_a95ac2cd.c:165:12: error: missing terminating " character
  165 |     printf("Enter expression
      |            ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_a95ac2cd.c:165:5: error: expected expression at end of input
  165 |     printf("Enter expression
      |     ^~~~~~
./samples/SAFE/__tmp_a95ac2cd.c:165:5: error: expected declaration or statement at end of input
